...
                        {session.user.name ??
                            session.user.email ??
                            'Conta conectada'}
                    </ThemedText>

                    <Button
                        title="Sair"
                        onPress={signOut}
                    />
                </ThemedView>
            )}

            {isLoading && (
...
